--- a/index (1).html
+++ b/index (1).html
@@ -5,17 +5,34 @@
   <meta charset="UTF-8">
   <title>Travel Inquiry Form</title>
   <style>
-    body { font-family: Arial, sans-serif; max-width: 700px; margin: auto; padding: 20px; }
-    label { font-weight: bold; display: block; margin-top: 15px; }
-    input, select, textarea { width: 100%; padding: 8px; margin-top: 5px; }
-    button { margin-top: 20px; padding: 10px 20px; font-size: 16px; }
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 700px;
+      margin: auto;
+      padding: 20px;
+    }
+    label {
+      font-weight: bold;
+      display: block;
+      margin-top: 15px;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
 
   <h1>Travel Inquiry Form</h1>
 
-  <form action="https://script.google.com/macros/s/AKfycbwK-3r_WtU7R4vn2HQdcXPtAdgK5PZ79DRJ4ms2MZg/dev" method="POST">
+  <form action="https://script.google.com/macros/s/AKfycbwxdCBddJrAqI7dMHeYJb-2fcW2_PTloPMK8GUXXcoEKxcElKsomGixZsXvLXTa-eCb/exec" method="POST">
     <label>Name:</label>
     <input type="text" name="name" required>
 
